deal with Amount <-> Currency conversion in AmountsProvider with entourage